# lightning-lens

./: README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
configs/: config.yaml
data/: collector.py
data/predictions/: predictions.csv  predictions_20250301_130323.csv  predictions_20250301_130732.csv  predictions_20250301_184229.csv  predictions_20250308_164406.csv
data/visualizations/: model_evolution.csv
lightning-docker-testnet/: docker-compose.yml
scripts/: adapter_proxy.py  auto_generate_predictions.py  cleanup_data.py  data_adapter.py  generate_predictions.py  http_server.py  init_nodes.py  learning_dashboard.py  lightning_lens.py  prediction_workflow.py  setup_network.py  simulate_network.py  train_initial_model.py  visualize_model_evolution.py  websocket_client.py
src/models/: features.py  online_learner.py  trainer.py
src/proto/: lightning_pb2.py  lightning_pb2_grpc.py
src/scripts/: http_server.py  model_runner.py  process_features.py  visualizer.py  websocket_client.py
src/utils/: lnd_client.py
test/: test_collector.py  test_features.py  test_integration.py  test_lnd_client.py  test_model.py  test_model_runner.py  test_visualizer.py
visualizations/: rebalance_report.md
